--- a/010 Constructor Functions/05-task.html
+++ b/010 Constructor Functions/05-task.html
@@ -1,134 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Использование событий</title>
     <style>
-        * {
-            padding: 0;
-            margin: 0;
-        }
+      * {
+        padding: 0;
+        margin: 0;
+      }
 
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
 
-        .task-list {
-            width: 500px;
-        }
+      .task-list {
+        width: 500px;
+      }
 
-        #start-message {
-            margin: 10px;
-        }
+      #start-message {
+        margin: 10px;
+      }
 
-        .task {
-            display: flex;
-            align-items: center;
-            border: 1px solid gray;
-            padding: 3px 8px;
-            margin: 2px 10px;
-        }
+      .task {
+        display: flex;
+        align-items: center;
+        border: 1px solid gray;
+        padding: 3px 8px;
+        margin: 2px 10px;
+      }
 
-        .task p {
-            margin-left: 4px;
-        }
+      .task p {
+        margin-left: 4px;
+      }
 
-        .completed {
-            background-color: green;
-            color: white;
-        }
+      .completed {
+        background-color: green;
+        color: white;
+      }
 
-        .completed p {
-            text-decoration: line-through;
-        }
+      .completed p {
+        text-decoration: line-through;
+      }
 
-        .input-panel {
-            width: 500px;
-            margin: 8px;
-            padding: 2px;
-        }
+      .input-panel {
+        width: 500px;
+        margin: 8px;
+        padding: 2px;
+      }
 
-        .input-panel button {
-            padding: 4px;
-            width: 25%;
-        }
+      .input-panel button {
+        padding: 4px;
+        width: 25%;
+      }
 
-        .input-panel input {
-            height: 23px;
-            padding-left: 4px;
-            width: 68%;
-        }
+      .input-panel input {
+        height: 23px;
+        padding-left: 4px;
+        width: 68%;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="input-panel">
-        <input type="text" id="task-name-input">
-        <button id="add-task-btn">Добавить задачу</button>
+      <input type="text" id="task-name-input" />
+      <button id="add-task-btn">Добавить задачу</button>
     </div>
     <div class="task-list">
-        <p id="start-message">Нет новых задач</p>
+      <p id="start-message">Нет новых задач</p>
     </div>
 
     <script>
-        /*
+      /*
         Задание:
         Изучите реализацию данного примера. Примените прототипы, где это возможно.
         */
-        let taskNameInput = document.querySelector("#task-name-input");
-        let addTaskButton = document.querySelector("#add-task-btn");
-        let startMessage = document.querySelector("#start-message");
-        let taskList = document.querySelector(".task-list");
+      let taskNameInput = document.querySelector("#task-name-input");
+      let addTaskButton = document.querySelector("#add-task-btn");
+      let startMessage = document.querySelector("#start-message");
+      let taskList = document.querySelector(".task-list");
 
-        addTaskButton.addEventListener("click", addTaskHandler);
+      addTaskButton.addEventListener("click", addTaskHandler);
 
-        taskNameInput.addEventListener("keydown", function (e) {
-            if (e.code == "Enter") addTaskHandler();
-        })
+      taskNameInput.addEventListener("keydown", function (e) {
+        if (e.code == "Enter") addTaskHandler();
+      });
 
-        function addTaskHandler() {
-            if (taskNameInput.value) {
-                if (!startMessage.hidden) startMessage.hidden = true;
+      function addTaskHandler() {
+        if (taskNameInput.value) {
+          if (!startMessage.hidden) startMessage.hidden = true;
 
-                let newTask = new Task(taskNameInput.value);
-                newTask.createIn(taskList);
+          let newTask = new Task(taskNameInput.value);
+          newTask.createIn(taskList);
 
-                taskNameInput.value = "";
-            } else {
-                alert("введите имя задачи");
-            }
+          taskNameInput.value = "";
+        } else {
+          alert("введите имя задачи");
         }
+      }
 
-        function Task(text) {
-            this.text = text;
-            this.isDone = false;
-            this.div = null;
+      function Task(text) {
+        this.text = text;
+        this.isDone = false;
+        this.div = null;
+      }
 
-            this.createIn = function (element) {
-                this.div = document.createElement("div");
-                this.div.classList.add("task");
+      Task.prototype.createIn = function (element) {
+        this.div = document.createElement("div");
+        this.div.classList.add("task");
 
-                let input = document.createElement("input");
-                input.addEventListener("click", () => this.changeState(this.div));
-                input.type = "checkbox";
+        let input = document.createElement("input");
+        input.addEventListener("click", () => this.changeState(this.div));
+        input.type = "checkbox";
 
-                let p = document.createElement("p");
-                p.innerText = this.text;
+        let p = document.createElement("p");
+        p.innerText = this.text;
 
-                this.div.append(input);
-                this.div.append(p);
-                element.append(this.div);
-            }
+        this.div.append(input);
+        this.div.append(p);
+        element.append(this.div);
+      };
 
-            this.changeState = function (element) {
-                this.isDone = !this.isDone;
-                element.classList.toggle("completed");
-            }
-        }
+      Task.prototype.changeState = function (element) {
+        this.isDone = !this.isDone;
+        element.classList.toggle("completed");
+      };
     </script>
-</body>
-
+  </body>
 </html>
