--- a/011 Classes/04-task.html
+++ b/011 Classes/04-task.html
@@ -1,80 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 04</title>
     <style>
-        * {
-            padding: 0;
-            margin: 0;
-        }
+      * {
+        padding: 0;
+        margin: 0;
+      }
 
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        }
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      }
 
-        .task-list {
-            width: 500px;
-        }
+      .task-list {
+        width: 500px;
+      }
 
-        #start-message {
-            margin: 10px;
-        }
+      #start-message {
+        margin: 10px;
+      }
 
-        .task {
-            display: flex;
-            align-items: center;
-            border: 1px solid gray;
-            padding: 3px 8px;
-            margin: 2px 10px;
-        }
+      .task {
+        display: flex;
+        align-items: center;
+        border: 1px solid gray;
+        padding: 3px 8px;
+        margin: 2px 10px;
+      }
 
-        .task p {
-            margin-left: 4px;
-        }
+      .task p {
+        margin-left: 4px;
+      }
 
-        .completed {
-            background-color: green;
-            color: white;
-        }
+      .completed {
+        background-color: green;
+        color: white;
+      }
 
-        .completed p {
-            text-decoration: line-through;
-        }
+      .completed p {
+        text-decoration: line-through;
+      }
 
-        .input-panel {
-            width: 500px;
-            margin: 8px;
-            padding: 2px;
-        }
+      .input-panel {
+        width: 500px;
+        margin: 8px;
+        padding: 2px;
+      }
 
-        .input-panel button {
-            padding: 4px;
-            width: 25%;
-        }
+      .input-panel button {
+        padding: 4px;
+        width: 25%;
+      }
 
-        .input-panel input {
-            height: 23px;
-            padding-left: 4px;
-            width: 68%;
-        }
+      .input-panel input {
+        height: 23px;
+        padding-left: 4px;
+        width: 68%;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="input-panel">
-        <input type="text" id="task-name-input">
-        <button id="add-task-btn">Добавить задачу</button>
+      <input type="text" id="task-name-input" />
+      <button id="add-task-btn">Добавить задачу</button>
+    </div>
+    <div class="input-panel">
+      <button id="show-all-btn">Все</button>
+      <button id="show-not-completed-btn">Незавершенные</button>
     </div>
     <div class="task-list">
-        <p id="start-message">Нет новых задач</p>
+      <p id="start-message">Нет новых задач</p>
     </div>
 
     <script>
-        /*
+      /*
         Задание:
         Добавьте в пользовательский интерфейс две кнопки "Показать не завершенные задачи" и 
         "Показать все" 
@@ -85,61 +88,88 @@
         При нажатии на кнопки, нужно удалять содержимое элемента .task-list и на основе данных, которые находятся в массиве
         tasks, заново строить DOM выбирая из массива те объекты, у которых свойство isDone содержит соответствующее значение.
         */
-        let taskNameInput = document.querySelector("#task-name-input");
-        let addTaskButton = document.querySelector("#add-task-btn");
-        let startMessage = document.querySelector("#start-message");
-        let taskList = document.querySelector(".task-list");
-        let tasks = [];
+      let taskNameInput = document.querySelector("#task-name-input");
+      let addTaskButton = document.querySelector("#add-task-btn");
+      let startMessage = document.querySelector("#start-message");
+      let showAllButton = document.querySelector("#show-all-btn");
+      let showNotCompletedButton = document.querySelector(
+        "#show-not-completed-btn"
+      );
+      let taskList = document.querySelector(".task-list");
 
-        addTaskButton.addEventListener("click", addTaskHandler);
+      let tasks = [];
 
-        taskNameInput.addEventListener("keydown", function (e) {
-            if (e.code == "Enter") addTaskHandler();
-        })
+      addTaskButton.addEventListener("click", addTaskHandler);
+      showAllButton.addEventListener("click", showAllHandler);
+      showNotCompletedButton.addEventListener("click", showNotCompletedHandler);
 
-        function addTaskHandler() {
-            if (taskNameInput.value) {
-                if (!startMessage.hidden) startMessage.hidden = true;
+      taskNameInput.addEventListener("keydown", function (e) {
+        if (e.code == "Enter") addTaskHandler();
+      });
 
-                let newTask = new Task(taskNameInput.value);
-                newTask.createIn(taskList);
-                tasks.push(newTask);
+      function addTaskHandler() {
+        if (taskNameInput.value) {
+          if (!startMessage.hidden) startMessage.hidden = true;
 
-                taskNameInput.value = "";
-            } else {
-                alert("введите имя задачи");
-            }
+          let newTask = new Task(taskNameInput.value);
+          newTask.createIn(taskList);
+          tasks.push(newTask);
+
+          taskNameInput.value = "";
+        } else {
+          alert("введите имя задачи");
+        }
+      }
+
+      function showAllHandler() {
+        taskList.innerHTML = "";
+        tasks.forEach((task) => {
+          task.createIn(taskList);
+        });
+      }
+
+      function showNotCompletedHandler() {
+        taskList.innerHTML = "";
+        tasks
+          .filter((task) => task.isDone == false)
+          .forEach((task) => {
+            task.createIn(taskList);
+          });
+      }
+
+      class Task {
+        constructor(text) {
+          this.text = text;
+          this.isDone = false;
+          this.div = null;
         }
 
-        class Task {
-            constructor(text) {
-                this.text = text;
-                this.isDone = false;
-                this.div = null;
-            }
+        createIn(element) {
+          this.div = document.createElement("div");
+          this.div.classList.add("task");
 
-            createIn(element) {
-                this.div = document.createElement("div");
-                this.div.classList.add("task");
+          let input = document.createElement("input");
+          input.addEventListener("click", () => this.changeState(this.div));
+          input.type = "checkbox";
 
-                let input = document.createElement("input");
-                input.addEventListener("click", () => this.changeState(this.div));
-                input.type = "checkbox";
+          let p = document.createElement("p");
+          p.innerText = this.text;
 
-                let p = document.createElement("p");
-                p.innerText = this.text;
+          this.div.append(input);
+          this.div.append(p);
 
-                this.div.append(input);
-                this.div.append(p);
-                element.append(this.div);
-            }
-
-            changeState(element) {
-                this.isDone = !this.isDone;
-                element.classList.toggle("completed");
-            }
+          if (this.isDone) {
+            this.div.classList.add("completed");
+            input.checked = true;
+          }
+          element.append(this.div);
         }
+
+        changeState(element) {
+          this.isDone = !this.isDone;
+          element.classList.toggle("completed");
+        }
+      }
     </script>
-</body>
-
+  </body>
 </html>
