--- a/014 Closures/03-task.html
+++ b/014 Closures/03-task.html
@@ -1,54 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 03</title>
     <style>
-        body {
-            font-family: Helvetica, Arial, sans-serif;
-            font-size: 16px;
-        }
+      body {
+        font-family: Helvetica, Arial, sans-serif;
+        font-size: 16px;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita nemo nam amet velit ut explicabo nisi voluptas
-        dicta ad, autem, id asperiores rem corporis esse. Dignissimos dicta facilis eaque mollitia.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita nemo nam
+      amet velit ut explicabo nisi voluptas dicta ad, autem, id asperiores rem
+      corporis esse. Dignissimos dicta facilis eaque mollitia.
     </p>
 
     <a href="#" id="size-16">16</a>
     <a href="#" id="size-24">24</a>
     <a href="#" id="size-32">32</a>
 
-    <a href="#" id="">red</a>
-    <a href="#" id="">green</a>
-    <a href="#" id="">blue</a>
+    <a href="#" id="red">red</a>
+    <a href="#" id="green">green</a>
+    <a href="#" id="blue">blue</a>
 
     <script>
-        /*
+      /*
         Задание:
         По аналогии со ссылками size-16, size-24, size-32, которые используют замыкание, добавьте обработчики
         на клик по ссылке red, green, blue. При клике по ссылкам должен измениться цвет параграфа на красный, зеленый или синий.
         Используйте замыкание в обработчиках.
         */
-        function makeSizer(size) {
-            return function () {
-                document.body.style.fontSize = size + 'px';
-            };
-        }
+      function makeSizer(size) {
+        return function () {
+          document.body.style.fontSize = size + "px";
+        };
+      }
 
-        let size16 = makeSizer(16);
-        let size24 = makeSizer(24);
-        let size32 = makeSizer(43);
+      let size16 = makeSizer(16);
+      let size24 = makeSizer(24);
+      let size32 = makeSizer(43);
 
-        document.querySelector("#size-16").onclick = size16;
-        document.querySelector("#size-24").onclick = size24;
-        document.querySelector("#size-32").onclick = size32;
+      document.querySelector("#size-16").onclick = size16;
+      document.querySelector("#size-24").onclick = size24;
+      document.querySelector("#size-32").onclick = size32;
+
+      let color1 = makeColor("red");
+      let color2 = makeColor("green");
+      let color3 = makeColor("blue");
+
+      document.querySelector("#red").onclick = color1;
+      document.querySelector("#green").onclick = color2;
+      document.querySelector("#blue").onclick = color3;
+
+      function makeColor(color) {
+        return function () {
+          document.body.style.color = color;
+        };
+      }
     </script>
-</body>
-
+  </body>
 </html>
