--- a/014 Closures/05-task.html
+++ b/014 Closures/05-task.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 05</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        /*
+      /*
         Задание:
         Перепишите класс Numbers, используя шаблон "модуль".
         Поля values и threshold должны быть закрыты в модуле и сохраняться в замыкании.
@@ -21,7 +20,7 @@
         ключевое солово class
         */
 
-        class Numbers {
+      /*class Numbers {
             #values;
             #threshold;
 
@@ -46,8 +45,32 @@
         let lt = numbers.getLessThanThreshold();
 
         console.log(gt);
-        console.log(lt);
-    </script>
-</body>
+        console.log(lt);*/
 
+      function createNumbers(threshold, values) {
+        // эти переменные добавлены для наглядности их можно удалить и напрямую работать с threshold и values
+        // так как аргументы функции createNumbers находятся в лексическом окружении
+        // они также будут сохранены в замыкании
+        let privateThreshold = threshold;
+        let privateValues = values;
+
+        return {
+          getGreaterThanThreshold() {
+            return privateValues.filter((v) => v > privateThreshold);
+          },
+
+          getLessThanThreshold() {
+            return privateValues.filter((v) => v < privateThreshold);
+          },
+        };
+      }
+
+      let numbers = createNumbers(50, [10, 20, 23, 11, 5, 6, 90, 33, 45, 67]);
+      let gt = numbers.getGreaterThanThreshold();
+      let lt = numbers.getLessThanThreshold();
+
+      console.log(gt);
+      console.log(lt);
+    </script>
+  </body>
 </html>
