--- a/016 Form Validation/02-task.html
+++ b/016 Form Validation/02-task.html
@@ -1,41 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 02</title>
     <style>
-        .form-group {
-            margin: 4px;
-        }
+      .form-group {
+        margin: 4px;
+      }
 
-        .form-group label {
-            width: 75px;
-            display: inline-block;
-        }
+      .form-group label {
+        width: 75px;
+        display: inline-block;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <form>
-        <div class="form-group">
-            <label>Логин</label>
-            <input type="text" name="login">
-        </div>
-        <div class="form-group">
-            <label>Пароль</label>
-            <input type="password" name="password">
-        </div>
+      <div class="form-group">
+        <label>Логин</label>
+        <input type="text" name="login" required minlength="4" />
+      </div>
+      <div class="form-group">
+        <label>Пароль</label>
+        <input
+          type="password"
+          name="password"
+          required
+          pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#\$%\^&\*]).{6,}"
+        />
+      </div>
 
-        <div class="form-group">
-            <input type="submit" value="Зарегистрироваться">
-        </div>
+      <div class="form-group">
+        <input type="submit" value="Зарегистрироваться" />
+      </div>
     </form>
-    
+
     <script>
-        /*
+      /*
         Задание:
         Добавьте валидацию формы:
         Поле ввода логина обязательное и должно содержать не менее 4 символов
@@ -46,6 +50,5 @@
         Регулярное выражение для проверки пароля - (?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#\$%\^&\*]).{6,}
         */
     </script>
-</body>
-
+  </body>
 </html>
