--- a/017 Cookeis and Web Storage/02-task.html
+++ b/017 Cookeis and Web Storage/02-task.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 02</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <textarea rows="10" cols="30"></textarea>
     <script>
-        /*
+      /*
         Задание:
         Сделайте так чтобы значение, введенное в поле ввода на данной странице, сохранялось при каждом изменении.
         Когда пользователь повторно зайдет на эту страницу, поле ввода должно содержать последнее введенное значение.
         */
-    </script>
-</body>
 
+      const textare = document.querySelector("textarea");
+      let text = localStorage.getItem("text");
+      if (text) textare.value = text;
+
+      textare.addEventListener("input", function () {
+        localStorage.setItem("text", textare.value);
+      });
+    </script>
+  </body>
 </html>
