--- a/018 Exception Handling/02-task.html
+++ b/018 Exception Handling/02-task.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 02</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        /*
+      /*
         Задание:
         Внесите правки в функцию sum. Сделайте так, чтобы при отсутствии одного из параметров, функция выбрасывала ошибку.        
         */
 
-        function sum(a, b) {
-            return a + b;
+      function sum(a, b) {
+        if (a == null || b == null) {
+          let err = new Error("Один или более параметров отсутствует");
+          throw err;
+        } else {
+          return a + b;
         }
+      }
 
-        try {
-            let result = sum(1, 5);
-            console.log(result);
-
-            result = sum(10);
-            console.log(result);
-        } catch (error) {
-            console.log(error.message);
-        }
+      try {
+        let result = sum(1, 5);
+        console.log(result);
+        result = sum(10, 100);
+        console.log(result);
+        result = sum(10);
+        console.log(result);
+      } catch (error) {
+        console.log(error.message);
+      }
     </script>
-</body>
-
+  </body>
 </html>
