--- a/018 Exception Handling/05-task.html
+++ b/018 Exception Handling/05-task.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 05</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        /*
-        Задание:
-        Внесите правки в код, не изменяя последовательность инструкций в функции operation сделайте так
-        чтобы строка "Освобождение ресурсов" выводилась каждый раз, когда запускалась функция operation.
-        */
+      /*
+      Задание:
+      Внесите правки в код, не изменяя последовательность инструкций в функции operation сделайте так
+      чтобы строка "Освобождение ресурсов" выводилась каждый раз, когда запускалась функция operation.
+      */
 
-        function operation() {
-            console.log("Выделение ресурсов");
-            return "Результат операции";
-            console.log("Освобождение ресурсов");
+      function operation() {
+        try {
+          console.log("Выделение ресурсов");
+          return "Результат операции";
+        } finally {
+          console.log("Освобождение ресурсов");
         }
+      }
 
-        operation();
-        operation();
-        operation();
-
+      operation();
+      operation();
+      operation();
     </script>
-</body>
-
+  </body>
 </html>
