--- a/019 Asynchronous Code. Promise/02-task.html
+++ b/019 Asynchronous Code. Promise/02-task.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task 02</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <button>Запустить</button>
     <script>
-        /*
+      /*
         Задание:
         Внесите правки в функцию asyncOperation. Эта функция представляет абстрактную асинхронную операцию, выполнение которой
         занимает 2 секунды. Результатом асинхронной операции является случайное значение от 0 до 5000 (записывается в переменную 
@@ -22,12 +21,17 @@
         через alert
         */
 
-        function asyncOperation() {
-            setTimeout(function () {
-                let result = Math.floor(Math.random() * 5001);
-            }, 2000)
-        }
-    </script>
-</body>
+      function asyncOperation(callback) {
+        setTimeout(function () {
+          let result = Math.floor(Math.random() * 5001);
 
+          if (callback) callback(result);
+        }, 2000);
+      }
+
+      document.querySelector("button").addEventListener("click", function () {
+        asyncOperation((result) => alert(result));
+      });
+    </script>
+  </body>
 </html>
